Fix vertical scroll on mobile

--- a/src/static/pycontw-2017/styles/_rwd.scss
+++ b/src/static/pycontw-2017/styles/_rwd.scss
@@ -239,6 +239,10 @@
   .what-is-pycon-taiwan {
     width: 100%;
     float: none;
+
+    &:before {
+      display: none;
+    }
   }
 
   .index-intro {
